Calendar: Fixes #17 all day overflow arrow

--- a/css/calendar.user.css
+++ b/css/calendar.user.css
@@ -394,6 +394,18 @@
 			/* Color Box Center */
 			.uHMk6b { border-color: var(--GR2) !important }
 			
+	/* DAY/WEEK/4-DAY VIEW */
+
+		/* Time Event (Past) Full Day With Overflow */
+		.g3dbUc.UflSff:is(.JRw8kf, .XFPdgf) {
+			overflow: visible !important;
+		}
+
+			/* Arrow */
+			.zWcBU.BvHyo.gpOGPc {
+				translate: calc(1px + 100%) -1px !important;
+			}
+
 	/* DAY VIEW */
 	
 		/* Body */
